Resolve "Optimize path planning by returning more than a bool in isPointCollidingWithObstacle"
Closes #1620

See merge request main/Sumatra!1485

sumatra-commit: 0df352e94feb1aed7348eb902ac1e5b9e02718bc